--- a/index.html
+++ b/index.html
@@ -547,6 +547,6 @@
       </div>
     </div>
     <!-----------------------------------------------JS Script Link---------------------------------------------------->
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
