--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           >Contact Me <img src="./img/right-arrow-white.png" alt="" class="w-4"
         /></a>
         <a
-          href="#resume"
+          href="./img/Paul Dinakaran Resume.pdf"
           class="px-10 py-3 border rounded-full border-gray-500 bg-white flex items-center gap-2 dark:text-black"
           >My Resume <img src="./img/download-icon.png" alt="" class="w-4"
         /></a>
