--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
       <h4 class="text-center mb-2 text-lg font-Ovo">What i Offer</h4>
       <h2 class="text-center text-5xl font-Ovo">My Services</h2>
       <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quo
-        voluptatem ipsum tenetur blanditiis dolorem atque exercitationem
-        veritatis, sunt molestias.
+        I specialize in creating stunning, responsive web designs tailored to
+        your business needs. My designs ensure intuitive user experiences.
+        Additionally, I offer solutions that capture your brand's essence.
       </p>
 
       <div class="grid grid-cols-auto gap-6 my-10">
@@ -282,7 +282,7 @@
           <img src="./img/web-icon.png" alt="" class="w-10" />
           <h3 class="text-lg my-4 text-gray-700 dark:text-white">Web Design</h3>
           <p class="text-sm text-gray-600 leading-5 dark:text-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Web development is the process of building, programming...
           </p>
           <a href="" class="flex items-center gap-2 text-sm mt-5"
             >Read more
@@ -301,7 +301,7 @@
           <img src="./img/mobile-icon.png" alt="" class="w-10" />
           <h3 class="text-lg my-4 text-gray-700 dark:text-white">Mobile App</h3>
           <p class="text-sm text-gray-600 leading-5 dark:text-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Web development is the process of building, programming...
           </p>
           <a href="" class="flex items-center gap-2 text-sm mt-5"
             >Read more
@@ -322,7 +322,7 @@
             UI/UX Design
           </h3>
           <p class="text-sm text-gray-600 leading-5 dark:text-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Web development is the process of building, programming...
           </p>
           <a href="" class="flex items-center gap-2 text-sm mt-5"
             >Read more
@@ -343,7 +343,7 @@
             Graphics Design
           </h3>
           <p class="text-sm text-gray-600 leading-5 dark:text-white">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Web development is the process of building, programming...
           </p>
           <a href="" class="flex items-center gap-2 text-sm mt-5"
             >Read more
@@ -364,9 +364,8 @@
       <h4 class="text-center mb-2 text-lg font-Ovo">My Portfolio</h4>
       <h2 class="text-center text-5xl font-Ovo">My latest Works</h2>
       <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam quo
-        voluptatem ipsum tenetur blanditiis dolorem atque exercitationem
-        veritatis, sunt molestias.
+        Welcome to my web development portfolio! Explore a collection of
+        projects showcasing my expertise in front-end development..
       </p>
       <!------------------------------------------work Cards------------------------------------------->
       <div class="grid grid-cols-auto my-10 gap-5">
