--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
       <h4 class="text-center mb-2 text-lg font-Ovo">What i Offer</h4>
       <h2 class="text-center text-5xl font-Ovo">My Services</h2>
       <p class="text-center max-w-2xl mx-auto mt-5 mb-12 font-Ovo">
-        I specialize in creating stunning, responsive web designs tailored to
-        your business needs. My designs ensure intuitive user experiences.
-        Additionally, I offer solutions that capture your brand's essence.
+        I make beautiful and easy-to-use websites that fit your business. My
+        designs help users have a smooth experience and show what your brand is
+        all about."
       </p>
 
       <div class="grid grid-cols-auto gap-6 my-10">
